plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
//	id 'org.hibernate.orm' version '6.5.2.Final'
}

group = 'com.fishing-log'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Springboot Starters
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// Lombok for compile-time annotations
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	// Development tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	// PostgreSQL driver
	runtimeOnly 'org.postgresql:postgresql'

	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// Springboot security
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	// Test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter-api'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers'
	testImplementation 'com.zaxxer:HikariCP'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'com.github.docker-java:docker-java-api'
	testImplementation 'com.github.docker-java:docker-java-transport-zerodep'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'org.junit.platform:junit-platform-suite'
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
}
